c3prj1_deck/grade.txt
Grading at Mon Aug 12 05:56:06 UTC 2019
Compiling deck.c
deck.c:15:2: error: expected identifier or ‘(’ before ‘if’
  if (d->n_cards != 0) {
  ^
deck.c:22:4: error: expected identifier or ‘(’ before ‘return’
    return 0;
    ^
deck.c:23:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Could not compile your deck.c!

Overall Grade: FAILED
